# headspace

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
docs/: STACK.md
docs/PREV/: PREV_ARCHITECTURE.md  PREV_OVERVIEW.md
docs/architecture/: DESIGN_PATTERN.md  IMPLEMENTATION_PHASE_1.md  IMPLEMENTATION_PHASE_2.md  IMPLEMENTATION_PHASE_3.md
docs/db_design/: PHASE_1.md  PHASE_2.md  PHASE_3.md
frontend/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: env.d.ts  main.ts
frontend/src/api/: client.ts
frontend/src/assets/: krayin-overrides.css
frontend/src/components/admin/: AccountForm.vue  Dashboard.vue  EmailClient.vue  LoginForm.vue
frontend/src/components/super/: AccountForm.vue  AgentForm.vue  AgentList.vue  LoginForm.vue  RoleForm.vue  RoleList.vue  (+3 more)
frontend/src/layouts/: AnonymousLayout.vue  SuperAdminLayout.vue  TenantAdminLayout.vue
frontend/src/plugins/: vuetify.ts
frontend/src/utils/: activityColors.ts
migrations/main/: 20260206000001_create_companies.sql  20260206000002_create_super_roles.sql  20260206000003_create_super_admins.sql
migrations/tenant/: 20260206100001_create_roles.sql  20260206100002_create_users.sql  20260207000001_create_groups.sql  20260207000002_create_user_groups.sql  20260207000003_create_attributes.sql  20260207000004_create_attribute_options.sql  20260207000005_create_attribute_values.sql  20260207000006_create_lead_sources.sql  20260207000007_create_lead_types.sql  20260207000008_create_lead_pipelines.sql  20260207000009_create_lead_stages.sql  20260207000010_create_lead_pipeline_stages.sql  20260207000011_create_organizations.sql  20260207000012_create_persons.sql  20260207000013_create_tags.sql  20260207000014_create_person_tags.sql  20260207000015_create_organization_tags.sql  20260207000016_create_products.sql  20260207000017_create_product_tags.sql  20260207000018_create_leads.sql  20260207000019_create_lead_tags.sql  20260207000020_create_lead_products.sql  20260207000021_create_activities.sql  20260207000022_create_activity_participants.sql  20260207000023_create_lead_activities.sql  20260207000024_create_person_activities.sql  20260207000025_create_quotes.sql  20260207000026_create_quote_items.sql  20260207000027_create_lead_quotes.sql  20260207000028_add_unique_constraints.sql  20260207000029_create_activity_files.sql  20260207000030_create_tenant_config.sql  20260207000031_create_emails.sql  20260207000032_add_imap_config.sql  20260207000033_create_email_templates.sql  20260207000034_create_warehouses.sql  20260207000035_create_web_forms.sql  20260207000036_add_imap_sync.sql
nginx/: nginx.conf
src/: lib.rs  main.rs
src/api/: mod.rs  pagination.rs
src/api/public/: web_forms.rs
src/api/super_admin/: account.rs  agents.rs  auth.rs  mod.rs  roles.rs  tenants.rs
src/api/tenant_admin/: account.rs  activities.rs  attributes.rs  auth.rs  config.rs  contacts.rs  dashboard.rs  data_transfer.rs  email_templates.rs  emails.rs  groups.rs  leads.rs  mod.rs  organizations.rs  persons.rs  pipelines.rs  products.rs  quotes.rs  roles.rs  search.rs  sources.rs  tags.rs  types.rs  users.rs  warehouses.rs  web_forms.rs
src/auth/: acl.rs  bouncer.rs  mod.rs  password.rs
src/config/: mod.rs
src/db/: guard.rs  migrate.rs  mod.rs  seed.rs  tenant.rs
src/error/: mod.rs
src/handlers/: health.rs  mod.rs
src/handlers/public/: mod.rs  web_forms.rs
src/handlers/super_admin/: account.rs  agents.rs  auth.rs  mod.rs  roles.rs  settings.rs  tenants.rs
src/handlers/tenant_admin/: account.rs  activities.rs  attributes.rs  auth.rs  contacts.rs  dashboard.rs  email_templates.rs  emails.rs  leads.rs  mod.rs  pipelines.rs  products.rs  quotes.rs  settings.rs  warehouses.rs  web_forms.rs
src/imap/: mod.rs  parser.rs  scheduler.rs  sync.rs
src/middleware/: auth.rs  csrf.rs  mod.rs  tenant.rs
src/models/: activity.rs  attribute.rs  company.rs  email_template.rs  group.rs  lead.rs  mod.rs  organization.rs  person.rs  pipeline.rs  product.rs  quote.rs  super_admin.rs  super_role.rs  tag.rs  tenant_admin.rs  warehouse.rs  web_form.rs
src/routes/: mod.rs
src/views/: mod.rs  super_admin.rs  tenant_admin.rs  vite.rs
templates/layouts/: base.html
tests/: super_admin_auth.rs
tests/common/: mod.rs
(+120 files in other folders)
