[package]
name = "headspace"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Templates
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# Auth & Sessions
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
argon2 = "0.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# PDF generation
genpdfi = "0.2"

# CSV
csv = "1"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# Utilities
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
time = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# Compile argon2 (and its crypto deps) with optimizations even in dev/test.
# Argon2 is intentionally slow; without this, each hash takes ~1s in debug mode.
[profile.dev.package.argon2]
opt-level = 3
[profile.test.package.argon2]
opt-level = 3
